--- a/app/src/main/res/layout/media_item_layout.xml
+++ b/app/src/main/res/layout/media_item_layout.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,5 +13,12 @@
         android:contentDescription="@string/contentDescription"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/videoImageView"
+        android:layout_width="@dimen/product_image_width"
+        android:layout_height="@dimen/product_image_height"
+        android:layout_centerInParent="true"
+        app:srcCompat="@drawable/ic_play_arrow_white_24dp" />
 
 </RelativeLayout>
