--- a/mainlibrary/src/main/res/values/styles.xml
+++ b/mainlibrary/src/main/res/values/styles.xml
@@ -90,6 +90,12 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="AppTheme.MediumTextAppearance" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:padding">@dimen/xsm_margin</item>
+    </style>
+
     <style name="AppTheme.MediumTextAppearanceCenter" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textAllCaps">false</item>
