--- a/app/src/main/res/layout/notification_item_layout.xml
+++ b/app/src/main/res/layout/notification_item_layout.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/notificationName"
-        style="@style/AppTheme.TitleTextAppearance"
+        style="@style/AppTheme.MediumTextAppearance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cairo_bold"
-        android:textColor="@color/grayDarkTextColor" />
+        android:textColor="@color/black"
+        app:fontFamily="@font/cairo_regular" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/notificationDate"
+        style="@style/AppTheme.TextAppearanceSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cairo_bold"
+        android:textColor="@color/black"
+        app:fontFamily="@font/cairo_regular"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notificationName" />
 
 </android.support.constraint.ConstraintLayout>
