--- a/app/src/main/res/layout/notification_item_layout.xml
+++ b/app/src/main/res/layout/notification_item_layout.xml
@@ -6,13 +6,14 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/notificationName"
-        style="@style/AppTheme.SmallButtonStyle"
+        style="@style/AppTheme.TextAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cairo_bold"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:padding="16dp"
         android:gravity="start"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
         android:textColor="@color/grayDarkTextColor"
         app:fontFamily="@font/cairo_regular" />
 
