--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -121,6 +121,7 @@
                 android:id="@+id/moreInfoLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/guidelineMoreInfo">
@@ -129,8 +130,8 @@
                     android:id="@+id/birthdateLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/genderTabLayout"
                     android:layout_toStartOf="@+id/genderTabLayout"
+                    android:layout_toLeftOf="@+id/genderTabLayout"
                     app:errorEnabled="true"
                     app:hintEnabled="false">
 
@@ -138,8 +139,8 @@
                         android:id="@+id/birthdate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/genderTabLayout"
                         android:layout_toStartOf="@+id/genderTabLayout"
+                        android:layout_toLeftOf="@+id/genderTabLayout"
                         android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                         android:drawableRight="@drawable/ic_arrow_drop_down_gray_24dp"
                         android:enabled="true"
@@ -154,9 +155,9 @@
                     android:id="@+id/genderTabLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
                     app:tabGravity="center"
                     app:tabIndicatorColor="@color/transparent"
                     app:tabMode="fixed"
