--- a/app/src/main/res/layout/business_guide_add_layout.xml
+++ b/app/src/main/res/layout/business_guide_add_layout.xml
@@ -107,7 +107,7 @@
                 android:layout_height="match_parent">
 
                 <android.support.constraint.Guideline
-                    android:id="@+id/guideline"
+                    android:id="@+id/hGuideline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
