--- a/app/src/main/res/layout/business_guide_item_layout.xml
+++ b/app/src/main/res/layout/business_guide_item_layout.xml
@@ -13,7 +13,17 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        
+    
+        <ImageView
+            android:id="@+id/vipBadge"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/contentDescription"
+            android:elevation="10dp"
+            android:src="@drawable/vip"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/businessIcon"
             android:layout_width="0dp"
