--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -61,15 +61,20 @@
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
+    
+              
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/info_Layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/profileHeaderColor"
                         android:padding="@dimen/md_padding"
+                        app:layout_constraintEnd_toEndOf="parent"
+                       
                         app:layout_constraintTop_toTopOf="parent">
-
+    
+                    
+                       
                         <ImageView
                             android:id="@+id/settingBtn"
                             android:layout_width="wrap_content"
