--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/background_primary_layout" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/hGuideline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -23,10 +23,10 @@
         app:cardElevation="@dimen/lg_elevation"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/hGuideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline">
+        app:layout_constraintTop_toTopOf="@+id/hGuideline">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
