--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorPrimary">
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/hGuideline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
