--- a/app/src/main/res/layout/subcategory_filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/subcategory_filter_bottom_sheet.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <android.support.constraint.Guideline
-            android:id="@+id/guideline"
+            android:id="@+id/hGuideline"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:orientation="horizontal"
@@ -39,10 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintBottom_toTopOf="@+id/hGuideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline">
+            app:layout_constraintTop_toTopOf="@+id/hGuideline">
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/businessSubCategories"
