fix issue with android 9 and business guide parameters

--- a/app/src/main/res/layout/pharmacy_duty_layout.xml
+++ b/app/src/main/res/layout/pharmacy_duty_layout.xml
@@ -28,6 +28,7 @@
         app:cardCornerRadius="@dimen/cardview_default_radius"
         app:cardElevation="@dimen/cardview_default_elevation"
         app:cardUseCompatPadding="true"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <RelativeLayout
